fuck.txt
==================
Making 68k
==================
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.5 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value or use a ...<max> suffix to tell
  CMake that the project does not need compatibility with older versions.


CMake Warning (dev) at /opt/Retro68-Source/cmake/retro68.toolchain.cmake.in:21 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@RETRO68_ROOT@'

  the old evaluation rules produce:

    '/opt/Retro68/toolchain/'

  but the new evaluation rules produce:

    '@RETRO68_ROOT@'

  Using the old result for compatibility since the policy is not set.
Call Stack (most recent call first):
  /usr/share/cmake/Modules/CMakeDetermineSystem.cmake:148 (include)
  CMakeLists.txt:3 (project)
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at /opt/Retro68-Source/cmake/retro68.toolchain.cmake.in:21 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@RETRO68_ROOT@'

  the old evaluation rules produce:

    '/opt/Retro68/toolchain'

  but the new evaluation rules produce:

    '@RETRO68_ROOT@'

  Using the old result for compatibility since the policy is not set.
Call Stack (most recent call first):
  build-68k/CMakeFiles/3.27.7/CMakeSystem.cmake:6 (include)
  CMakeLists.txt:3 (project)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- The C compiler identification is GNU 12.2.0
-- The CXX compiler identification is GNU 12.2.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /opt/Retro68/toolchain/bin/m68k-apple-macos-gcc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /opt/Retro68/toolchain/bin/m68k-apple-macos-g++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Making for Retro68
-- Configuring done (0.7s)
-- Generating done (0.0s)
-- Build files have been written to: /home/gavin/Projects/GUSI68/build-68k
[  2%] Building CXX object CMakeFiles/os9fetch.dir/src/GUSIBasics.cpp.obj
/home/gavin/Projects/GUSI68/src/GUSIBasics.cpp: In function ‘int GUSIMapMacError(OSErr)’:
/home/gavin/Projects/GUSI68/src/GUSIBasics.cpp:166:48: error: ‘ELOOK’ was not declared in this scope; did you mean ‘TLOOK’?
  166 |                 return GUSIErrorMapping(error, ELOOK);
      |                                                ^~~~~
      |                                                TLOOK
/home/gavin/Projects/GUSI68/src/GUSIBasics.cpp:209:36: error: ‘ESOCKTNOSUPPORT’ was not declared in this scope; did you mean ‘kESOCKTNOSUPPORTErr’?
  209 |                 MAP_OT_POSIX_ERROR(ESOCKTNOSUPPORT); /*  Socket type not supported                      */
      |                                    ^~~~~~~~~~~~~~~
/home/gavin/Projects/GUSI68/src/GUSIBasics.cpp:183:24: note: in definition of macro ‘MAP_OT_POSIX_ERROR’
  183 |                 return err
      |                        ^~~
/home/gavin/Projects/GUSI68/src/GUSIBasics.cpp:221:36: error: ‘ESHUTDOWN’ was not declared in this scope; did you mean ‘ENETDOWN’?
  221 |                 MAP_OT_POSIX_ERROR(ESHUTDOWN);           /*  Can't send after socket shutdown   */
      |                                    ^~~~~~~~~
/home/gavin/Projects/GUSI68/src/GUSIBasics.cpp:183:24: note: in definition of macro ‘MAP_OT_POSIX_ERROR’
  183 |                 return err
      |                        ^~~
make[2]: *** [CMakeFiles/os9fetch.dir/build.make:76: CMakeFiles/os9fetch.dir/src/GUSIBasics.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:85: CMakeFiles/os9fetch.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
